--- a/app/(www)/globals.css
+++ b/app/(www)/globals.css
@@ -3,28 +3,47 @@
 @tailwind utilities;
 
 
-@layer base {
- 
 
-  @font-face {
-    font-family: 'Pixel';
-    src: url('/fonts/Pixel.woff2') format('woff2');
-    font-weight: 400;
-    font-style: normal;
-  } 
-        }
+@layer base {
+
 
     html body {
     top: 0px;
     left: 0px;
     }
 
-    .scene-nav-info {
-      display:none;
+
+    /* Scroll */
+
+    /* width */
+    ::-webkit-scrollbar {
+      width: 5px;
+    }
+
+    /* Track */
+    ::-webkit-scrollbar-track {
+      background: #f1f1f1;
+    }
+
+    /* Handle */
+    ::-webkit-scrollbar-thumb {
+      background: #888;
+    }
+
+    /* Handle on hover */
+    ::-webkit-scrollbar-thumb:hover {
+      background: #555;
+    }
+
+
+
+    .handjet {
+
+      font-family: var(--font-handjet);
     }
 
     .graphTooltip {
-      font-family: 'Fira Code', monospace;
+      font-family: var(--font-handjet);
       font-size: 11px;
       color: #666666;
       background: white;
@@ -80,3 +99,16 @@
     to   { opacity: 1; }
 }
 
+}
+
+.scene-nav-info {
+  display:none;
+}
+
+@font-face {
+  font-family: 'Handjet';
+  src: url('/fonts/Handjet-Medium.woff2') format('woff2');
+  font-weight: 500;
+  font-display: block;
+  font-style: normal;
+}
