--- a/app/(www)/globals.css
+++ b/app/(www)/globals.css
@@ -16,7 +16,7 @@
       font-family: 'Pixel';
       src: url('../../public/fonts/Pixel.woff2') format('woff2');
       font-weight: 400;
-      font-display: swap;
+      font-display: block;
       font-style: normal;
     } 
 
@@ -44,14 +44,8 @@
     }
 
 
-
-    .handjet {
-
-      font-family: var(--font-handjet);
-    }
-
     .graphTooltip {
-      font-family: var(--font-handjet);
+      font-family: 'Pixel';
       font-size: 11px;
       color: #666666;
       background: white;
