--- a/app/(www)/globals.css
+++ b/app/(www)/globals.css
@@ -2,108 +2,124 @@
 @tailwind components;
 @tailwind utilities;
 
-
-
 @layer base {
-
-
-    html body {
+  html body {
     top: 0px;
     left: 0px;
-    }
+  }
 
-    @font-face {
-      font-family: 'Pixel';
-      src: url('../../public/fonts/Pixel.woff2') format('woff2');
-      font-weight: 400;
-      font-display: block;
-      font-style: normal;
-    } 
+  @font-face {
+    font-family: "Pixel";
+    src: url("../../public/fonts/Pixel.woff2") format("woff2");
+    font-weight: 400;
+    font-display: block;
+    font-style: normal;
+  }
 
+  /* Scroll */
 
-    /* Scroll */
+  /* width */
+  ::-webkit-scrollbar {
+    width: 5px;
+  }
 
-    /* width */
-    ::-webkit-scrollbar {
-      width: 5px;
-    }
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: #f1f1f1;
+  }
 
-    /* Track */
-    ::-webkit-scrollbar-track {
-      background: #f1f1f1;
-    }
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #888;
+  }
 
-    /* Handle */
-    ::-webkit-scrollbar-thumb {
-      background: #888;
-    }
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #555;
+  }
 
-    /* Handle on hover */
-    ::-webkit-scrollbar-thumb:hover {
-      background: #555;
-    }
+  .graphTooltip {
+    font-family: "Pixel";
+    font-size: 11px;
+    color: #666666;
+    background: white;
+    border: 1px dotted #cccccc;
+    padding: 4px;
+  }
 
+  .outline-text {
+    -webkit-text-stroke: 1px black;
+    color: white;
+    text-shadow:
+      3px 3px 0 #000,
+      -1px -1px 0 #000,
+      1px -1px 0 #000,
+      -1px 1px 0 #000,
+      1px 1px 0 #000;
+  }
 
-    .graphTooltip {
-      font-family: 'Pixel';
-      font-size: 11px;
-      color: #666666;
-      background: white;
-      border: 1px dotted #cccccc;
-      padding: 4px;
-    }
-
-    .outline-text {
-      -webkit-text-stroke: 1px black;
-      color: white;
-      text-shadow:
-          3px 3px 0 #000,
-        -1px -1px 0 #000,  
-         1px -1px 0 #000,
-         -1px 1px 0 #000,
-          1px 1px 0 #000;
-   }
-
-   .fadein-animation {
+  .fadein-animation {
     -webkit-animation: fadein 0.5s; /* Safari, Chrome and Opera > 12.1 */
-       -moz-animation: fadein 0.5s; /* Firefox < 16 */
-        -ms-animation: fadein 0.5s; /* Internet Explorer */
-         -o-animation: fadein 0.5s; /* Opera < 12.1 */
-            animation: fadein 0.5s;
-}
+    -moz-animation: fadein 0.5s; /* Firefox < 16 */
+    -ms-animation: fadein 0.5s; /* Internet Explorer */
+    -o-animation: fadein 0.5s; /* Opera < 12.1 */
+    animation: fadein 0.5s;
+  }
 
-@keyframes fadein {
-    from { opacity: 0.1; }
-    to   { opacity: 1; }
-}
+  @keyframes fadein {
+    from {
+      opacity: 0.1;
+    }
+    to {
+      opacity: 1;
+    }
+  }
 
-/* Firefox < 16 */
-@-moz-keyframes fadein {
-    from { opacity: 0.1; }
-    to   { opacity: 1; }
-}
+  /* Firefox < 16 */
+  @-moz-keyframes fadein {
+    from {
+      opacity: 0.1;
+    }
+    to {
+      opacity: 1;
+    }
+  }
 
-/* Safari, Chrome and Opera > 12.1 */
-@-webkit-keyframes fadein {
-    from { opacity: 0.1; }
-    to   { opacity: 1; }
-}
+  /* Safari, Chrome and Opera > 12.1 */
+  @-webkit-keyframes fadein {
+    from {
+      opacity: 0.1;
+    }
+    to {
+      opacity: 1;
+    }
+  }
 
-/* Internet Explorer */
-@-ms-keyframes fadein {
-    from { opacity: 0.1; }
-    to   { opacity: 1; }
-}
+  /* Internet Explorer */
+  @-ms-keyframes fadein {
+    from {
+      opacity: 0.1;
+    }
+    to {
+      opacity: 1;
+    }
+  }
 
-/* Opera < 12.1 */
-@-o-keyframes fadein {
-    from { opacity: 0.1; }
-    to   { opacity: 1; }
-}
-
+  /* Opera < 12.1 */
+  @-o-keyframes fadein {
+    from {
+      opacity: 0.1;
+    }
+    to {
+      opacity: 1;
+    }
+  }
 }
 
 .scene-nav-info {
-  display:none;
+  display: none;
 }
 
+.myOverlayComponent {
+  z-index: 100;
+}
