--- a/app/(www)/globals.css
+++ b/app/(www)/globals.css
@@ -45,22 +45,15 @@
 
   .graphTooltip {
     font-family: "Pixel";
-    font-size: 11px;
+    font-size: 12px;
     color: #666666;
     background: white;
-    border: 1px dotted #cccccc;
-    padding: 4px;
+    border: 1px dotted #888888;
+    padding: 6px;
   }
-
-  .outline-text {
-    -webkit-text-stroke: 1px black;
-    color: white;
-    text-shadow:
-      3px 3px 0 #000,
-      -1px -1px 0 #000,
-      1px -1px 0 #000,
-      -1px 1px 0 #000,
-      1px 1px 0 #000;
+  .imgTooltip {
+    border: 1px dotted #888888;
+    margin-top: 6px;
   }
 
   .fadein-animation {
