--- a/app/(www)/globals.css
+++ b/app/(www)/globals.css
@@ -3,114 +3,119 @@
 @tailwind utilities;
 
 @layer base {
-  html body {
-    top: 0px;
-    left: 0px;
+  html,
+  body {
+    @apply top-0 left-0 bg-light dark:bg-black text-neutral;
   }
-
-  @font-face {
-    font-family: "Pixel";
-    src: url("../../public/fonts/Pixel.woff2") format("woff2");
-    font-weight: 400;
-    font-display: block;
-    font-style: normal;
+  pre {
+    font-family: monospace;
+    font-size: 10px;
+    line-height: 12px;
   }
+}
 
-  /* Scroll */
+@font-face {
+  font-family: "Pixel";
+  src: url("../../public/fonts/Pixel.woff2") format("woff2");
+  font-weight: 400;
+  font-display: block;
+  font-style: normal;
+}
 
-  /* width */
-  ::-webkit-scrollbar {
-    width: 5px;
+/* Scroll */
+
+/* width */
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
+.localfont {
+  font-family: "Pixel";
+  font-size: 11px;
+}
+
+.graphTooltip {
+  font-family: "Pixel";
+  font-size: 12px;
+  color: #666666;
+  background: white;
+  border: 1px dotted #888888;
+  padding: 6px;
+}
+.imgTooltip {
+  border: 1px dotted #888888;
+  margin-top: 6px;
+}
+
+.fadein-animation {
+  -webkit-animation: fadein 0.5s; /* Safari, Chrome and Opera > 12.1 */
+  -moz-animation: fadein 0.5s; /* Firefox < 16 */
+  -ms-animation: fadein 0.5s; /* Internet Explorer */
+  -o-animation: fadein 0.5s; /* Opera < 12.1 */
+  animation: fadein 0.5s;
+}
+
+@keyframes fadein {
+  from {
+    opacity: 0.1;
   }
-
-  /* Track */
-  ::-webkit-scrollbar-track {
-    background: #f1f1f1;
+  to {
+    opacity: 1;
   }
+}
 
-  /* Handle */
-  ::-webkit-scrollbar-thumb {
-    background: #888;
+/* Firefox < 16 */
+@-moz-keyframes fadein {
+  from {
+    opacity: 0.1;
   }
+  to {
+    opacity: 1;
+  }
+}
 
-  /* Handle on hover */
-  ::-webkit-scrollbar-thumb:hover {
-    background: #555;
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fadein {
+  from {
+    opacity: 0.1;
   }
+  to {
+    opacity: 1;
+  }
+}
 
-  .localfont {
-    font-family: "Pixel";
-    font-size: 11px;
+/* Internet Explorer */
+@-ms-keyframes fadein {
+  from {
+    opacity: 0.1;
   }
+  to {
+    opacity: 1;
+  }
+}
 
-  .graphTooltip {
-    font-family: "Pixel";
-    font-size: 12px;
-    color: #666666;
-    background: white;
-    border: 1px dotted #888888;
-    padding: 6px;
+/* Opera < 12.1 */
+@-o-keyframes fadein {
+  from {
+    opacity: 0.1;
   }
-  .imgTooltip {
-    border: 1px dotted #888888;
-    margin-top: 6px;
-  }
-
-  .fadein-animation {
-    -webkit-animation: fadein 0.5s; /* Safari, Chrome and Opera > 12.1 */
-    -moz-animation: fadein 0.5s; /* Firefox < 16 */
-    -ms-animation: fadein 0.5s; /* Internet Explorer */
-    -o-animation: fadein 0.5s; /* Opera < 12.1 */
-    animation: fadein 0.5s;
-  }
-
-  @keyframes fadein {
-    from {
-      opacity: 0.1;
-    }
-    to {
-      opacity: 1;
-    }
-  }
-
-  /* Firefox < 16 */
-  @-moz-keyframes fadein {
-    from {
-      opacity: 0.1;
-    }
-    to {
-      opacity: 1;
-    }
-  }
-
-  /* Safari, Chrome and Opera > 12.1 */
-  @-webkit-keyframes fadein {
-    from {
-      opacity: 0.1;
-    }
-    to {
-      opacity: 1;
-    }
-  }
-
-  /* Internet Explorer */
-  @-ms-keyframes fadein {
-    from {
-      opacity: 0.1;
-    }
-    to {
-      opacity: 1;
-    }
-  }
-
-  /* Opera < 12.1 */
-  @-o-keyframes fadein {
-    from {
-      opacity: 0.1;
-    }
-    to {
-      opacity: 1;
-    }
+  to {
+    opacity: 1;
   }
 }
 
